# Electron-Plotly

./: .gitignore  README.md  angular.json  main.js  package-lock.json  package.json  pyproject.toml  splash.html
deployment/: ElectronServer.spec
src/app/: app.config.ts  app.css  app.html  app.spec.ts  app.ts
src/server/: __main__.py  app.py  authentication.py  cli.py  handlers.py  log.py  make_app.py
