[project]
name = "server"
version = "0.0.0"
description = "Project for setting up an angular project that renders plotly with WebGl on a tornado web server and loaded into an electron application"
requires-python = ">=3.13"
dependencies = ["tornado>=6.5.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
