[project]
name = "server"
version = "0.0.0"
description = "Project for setting up an angular project that renders plotly with WebGl on a tornado web server and loaded into an electron application"
requires-python = ">=3.13"
dependencies = ["click>=8.3.1", "tornado>=6.5.4"]

[project.optional-dependencies]
support = ["black>=26.3.0", "flake8>=7.3.0", "isort>=8.0.1", "mypy>=1.19.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
